hphp/hack/test/sound_dynamic/typing/generic_params.bad.php.exp
File "generic_params.bad.php", line 18, characters 3-32:
Typing error (Typing[4110])
  File "generic_params.bad.php", line 18, characters 11-13:
  Expected `int`
  File "generic_params.bad.php", line 18, characters 26-32:
  But got `dynamic`
  File "generic_params.bad.php", line 18, characters 26-32:
  This type argument to `Box` must match exactly (it is invariant)
File "generic_params.bad.php", line 19, characters 3-43:
Typing error (Typing[4110])
  File "generic_params.bad.php", line 19, characters 17-22:
  Expected `string`
  File "generic_params.bad.php", line 19, characters 37-43:
  But got `dynamic`
  File "generic_params.bad.php", line 19, characters 37-43:
  This type argument to `SimpleBox` must match exactly (it is invariant)
File "generic_params.bad.php", line 20, characters 3-35:
Typing error (Typing[4110])
  File "generic_params.bad.php", line 20, characters 14-16:
  Expected `int`
  File "generic_params.bad.php", line 20, characters 29-35:
  But got `(dynamic & arraykey)`
  File "generic_params.bad.php", line 20, characters 29-35:
  This type argument to `KeyBox` must match exactly (it is invariant)
File "generic_params.bad.php", line 29, characters 7-16:
Class AnotherBox must support dynamic at least as often as Getter:
Getter<vec<T>> is subtype of dynamic implies AnotherBox<T> is subtype of dynamic (Typing[4433])
  File "generic_params.bad.php", line 29, characters 18-18:
  Expected `T`
  File "generic_params.bad.php", line 29, characters 7-16:
  But got `dynamic`
  File "generic_params.bad.php", line 29, characters 7-16:
  This type argument to `AnotherBox` must match exactly (it is invariant)
